# t2v_mod_fw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  ble_task.c  ble_task.h  common.h  firmware_main.c  idf_component.yml  ir_nec_encoder.c  ir_nec_encoder.h  ir_nec_receiver_task.c  led_driver_task.c  queue_handle_vec.h  t2v.h  t2v_address_config.h  t2v_config.h  t2v_init.c  t2v_types.h  t2v_utils.h  usb_device_task.c
main/ble_task/: Kconfig.ble_task  ble_task.c  ble_task.h  ble_task_priv.h
main/btn_input_task/: Kconfig.btn_input_task  btn_input_task.c  btn_input_task.h
main/ethernet_task/: Kconfig.ethernet_task  ethernet_task.c  ethernet_task.h
main/ir_nec_rx_task/: Kconfig.ir_nec_rx_task  ir_nec_rx_task.c  ir_nec_rx_task.h
main/ir_nec_tx_task/: Kconfig.ir_nec_tx_task  ir_nec_encoder.c  ir_nec_encoder.h  ir_nec_tx_task.c  ir_nec_tx_task.h
main/led_driver_task/: Kconfig.led_driver_task  led_driver_task.c  led_driver_task.h
main/usb_device_task/: Kconfig.usb_device_task  usb_device_task.c  usb_device_task.h
main/ws2812_task/: Kconfig.ws2812_task  led_strip_encoder.h  ws2812_task.c  ws2812_task.h
main/zenoh_task/: Kconfig.zenoh_task  zenoh_task.c  zenoh_task.h
